version/0.7/_sources/autoapi/ansys/dyna/core/lib/card_interface/index.rst.txt
ansys.dyna.core.lib.card_interface
==================================

.. py:module:: ansys.dyna.core.lib.card_interface


Classes
-------

.. autoapisummary::

   ansys.dyna.core.lib.card_interface.CardInterface


Module Contents
---------------

.. py:class:: CardInterface

   
   Abstract base class for all the implementations of keyword cards.
















   ..
       !! processed by numpydoc !!

   .. py:method:: __subclasshook__(subclass)
      :classmethod:



   .. py:method:: read(buf: TextIO, parameter_set: Optional[ansys.dyna.core.lib.parameter_set.ParameterSet]) -> None
      :abstractmethod:


      
      Reads the card data from an input text buffer.
















      ..
          !! processed by numpydoc !!


   .. py:method:: write(format: Optional[ansys.dyna.core.lib.format_type.format_type], buf: Optional[TextIO], comment: Optional[bool]) -> Union[str, None]
      :abstractmethod:


      
      Renders the card in the dyna keyword format.
      :param buf: Buffer to write to. If None, the output is returned as a string
      :param format: format_type to use. Default to standard.
















      ..
          !! processed by numpydoc !!


   .. py:property:: format
      :type: ansys.dyna.core.lib.format_type.format_type

      :abstractmethod:


      
      Get the card format type.
















      ..
          !! processed by numpydoc !!


